src/styles/editor-style.css
/* ... */
.toggle input + svg {
    color: black;

    pointer-events: none;
    width: 32px; height: 32px;
}

.toggle input:checked {
    background: blue;
}

.toggle input:checked + svg, .toggle input:checked + * + svg {
    color: white;
}

.room-select {
    --room-size: calc(16px * 3);

    flex: 1;

    padding: .5rem;

    display: flex; flex-direction: row;
    flex-wrap: wrap;
    gap: .5rem;
    justify-content: flex-start;
    align-content: flex-start;

    border-radius: .5rem;
    background: var(--trans-gradient);
    overflow: hidden scroll;
}

.room-select label {
    min-height: unset;

    width: var(--room-size);
    height: var(--room-size);
}

.room-select canvas {
    width: 100%; height: 100%;
}

.item-management-buttons {
    display: flex; flex-direction: row;
    gap: .5rem;
}

.item-management-buttons > * {
    width: 56px;
    height: 40px;

    border-radius: .75rem;
}

#editor {
    display: flex; flex-direction: row;
    flex-wrap: wrap;
    gap: 1rem;

    align-items: stretch;
    justify-content: center;
}

#upper-toolbar {
    display: flex; flex-direction: row;
    gap: .5rem;
}

#upper-toolbar .button-row > * {
    min-width: 48px;
}

#mode-select {
    gap: 0;
}

#mode-select > * {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

#mode-select.radio-select input[type="radio"]:checked {
    background: #367b6b;
}

#undo-row {
    padding-bottom: .5rem;
    gap: .5rem;
}

#undo-row > * {
    border-radius: .75rem;
}

#menu {
    margin-top: .5rem;
}

#palette-edit {
    flex: 1;

    border-radius: .5rem;
    background: var(--trans-gradient);

    padding: 1rem;
    gap: 1rem;
}

#palette-edit-select > :first-child {
    border-radius: 1rem 0 0 0;
}

#palette-edit-select > :last-child {
    border-radius: 0 1rem 0 0;
}

#palette-edit-select label img {
    filter: none;
}

#color-select {
    gap: .5rem;
}

#color-select label {
    min-height: 0;
}

#color-select input[type="radio"]:checked {
    background: none;
    z-index: 5;
    box-shadow: 0 0 0 .5em white;
}

#color-edit {
    gap: 1rem;
}

#controls {
    position: relative;

    width: 512px;
    height: calc(512px + 48px + .5rem);
    background: none;

    padding: 0;
    border-radius: 0;
    overflow: visible;

    display: flex; flex-direction: column;

    justify-content: unset;
    align-items: unset;
    gap: 0;
}

#viewport {
    position: relative;

    width: 512px;
    height: calc(512px + 48px + .5rem);
    background: none;

    padding: 0;
    border-radius: 0;
    overflow: visible;

    display: flex; flex-direction: column;

    justify-content: unset;
    align-items: unset;

    gap: .5rem;
}

#palette-room, #tile-map-paint, #events-room {
    width: 512px; height: 512px;
}

#room-paint-buttons label {
    min-height: unset;
}

#room-paint-buttons .radio-select svg {
    min-height: unset;
    transform: translate(-50%, -50%) scale(75%);
}

#palette-room {
    cursor: not-allowed;
}

#tile-map-tab {
    display: flex; flex-direction: column;
    gap: .5rem;
}

#tile-map-paint {
    cursor: crosshair;
}

#tile-paint-room {
    width: 256px; height: 256px;

    cursor: crosshair;
}

#tile-paint-canvases * {
    background: none;
}

#tile-paint-canvases input:checked {
    pointer-events: none;
    background: none;
}

#tile-paint-canvases input:not(:checked) + canvas {
    pointer-events: none;
    opacity: 50%;
}

#room-events-tab {
    display: flex; flex-direction: column;
    gap: .5rem;

    cursor: pointer;
}

#event-empty {
    display: flex; flex-direction: column;
    gap: .5rem;
}

.event-template-list > button {
    flex: 0;

    display: flex; flex-direction: row;
    padding: .5rem; gap: .5rem;
    justify-content: flex-start;
}

.event-template-list {
    display: grid;
    gap: .5rem;
    grid-template-columns: repeat(2, 1fr);
}

#event-properties {
    flex: 1;
    display: flex; flex-direction: column;
    gap: 1rem;

    /* overflow: hidden; */
}

#event-properties > .row {
    overflow: hidden;
}

#event-properties textarea {
    flex: 1;
    resize: none;
    border-radius: 1rem;
}

.event-sheet {
    flex: 1;

    display: flex; flex-direction: column;

    border-radius: .5rem 0 0 .5rem;
    background: black;
    overflow: hidden scroll;
}

.event-sheet > :nth-child(2n+0) {
    background: var(--trans-color-1);
}

.event-sheet > :nth-child(2n+1) {
    background: var(--trans-color-2);
}

.event-sheet #event-sheet-add {
    flex: 0;
    margin: .5rem;
    background: var(--button-color);
}

.event-line {
    display: flex; flex-direction: row;
    gap: .25rem;

    height: 32px;
    min-height: 32px;

    cursor: pointer;

    gap: .25rem;
    padding: 0 .25rem;
}

.event-line > input, .event-line > select { 
    color: white;
    flex: 1;
    border-radius: 0;
    background: inherit;
    padding-top: 0;
    padding-bottom: 0;
}

.event-line:not(.active) > * {
    pointer-events: none;
}

.event-line.active {
    filter: invert();
}

.event-line :focus {
    outline: thick solid var(--button-color);
    z-index: 5;
}

.event-lines-toolbar {
    flex: unset;
    width: 48px;
    height: 180px;
    gap: .5rem;

    display: flex; flex-direction: column;
}

.event-lines-toolbar > button {
    border-radius: 0 .5rem .5rem 0;
    padding: 0;
    height: 40px;
}

#field-json-editor {
    height: 192px;

    display: flex;
}

#field-file-editor {
    display: flex;
    flex-direction: row;
    gap: .5rem;
}

#field-file-editor button {
    height: 40px;
    border-radius: .75rem;
    padding-left: .75rem;
    padding-right: .75rem;
}

#field-file-sidebar {
    width: 128px;

    display: flex;
    flex-direction: column;
    gap: .5rem;
}

#field-dialogue-editor {
    height: 96px;

    display: flex;
}

#field-dialogue-editor > .row {
    gap: .5rem;
}

#field-dialogue-editor textarea {
    border-radius: .5rem 1rem 1rem .5rem;
}

#dialogue-editor-toolbar {
    display: flex; flex-direction: column;
    gap: .5rem;

    width: 48px;
}
/* ... */

